@@ -15,6 +15,7 @@ import com.grash.utils.Helper;
 import io.swagger.annotations.Api;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
+import org.springframework.data.util.Pair;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
@@ -48,9 +49,13 @@ public class WOAnalyticsController {
     public ResponseEntity<WOStats> getCompleteStats(HttpServletRequest req, @RequestBody DateRange dateRange) {
         OwnUser user = userService.whoami(req);
         if (user.canSeeAnalytics()) {
-            Collection<WorkOrder> workOrders = workOrderService.findByCompanyAndCreatedAtBetween(user.getCompany().getId(), dateRange.getStart(), dateRange.getEnd());
-            Collection<WorkOrder> completedWO = workOrders.stream().filter(workOrder -> workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
-            Collection<WorkOrder> withFirstTimeToReactWO = workOrders.stream().filter(workOrder -> workOrder.getFirstTimeToReact() != null).collect(Collectors.toList());
+            Collection<WorkOrder> workOrders =
+                    workOrderService.findByCompanyAndCreatedAtBetween(user.getCompany().getId(), dateRange.getStart()
+                            , dateRange.getEnd());
+            Collection<WorkOrder> completedWO =
+                    workOrders.stream().filter(workOrder -> workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
+            Collection<WorkOrder> withFirstTimeToReactWO =
+                    workOrders.stream().filter(workOrder -> workOrder.getFirstTimeToReact() != null).collect(Collectors.toList());
             int total = workOrders.size();
             int complete = completedWO.size();
             int compliant = (int) completedWO.stream().filter(WorkOrder::isCompliant).count();
@@ -67,7 +72,8 @@ public class WOAnalyticsController {
 
     @GetMapping("/mobile/overview")
     @PreAuthorize("hasRole('ROLE_CLIENT')")
-    public ResponseEntity<MobileWOStats> getMobileOverview(HttpServletRequest req, @RequestParam("assignedToMe") boolean assignedToMe) {
+    public ResponseEntity<MobileWOStats> getMobileOverview(HttpServletRequest req,
+                                                           @RequestParam("assignedToMe") boolean assignedToMe) {
         OwnUser user = userService.whoami(req);
         Collection<WorkOrder> result;
         Collection<WorkOrder> workOrders;
@@ -77,12 +83,16 @@ public class WOAnalyticsController {
         } else {
             result = workOrderService.findByCompany(user.getCompany().getId());
         }
-        workOrders = result.stream().filter(workOrder -> !workOrder.isArchived() && !workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
-        completeWorkOrders = result.stream().filter(workOrder -> workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
+        workOrders =
+                result.stream().filter(workOrder -> !workOrder.isArchived() && !workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
+        completeWorkOrders =
+                result.stream().filter(workOrder -> workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
 
         int open = (int) workOrders.stream().filter(workOrder -> workOrder.getStatus().equals(Status.OPEN)).count();
-        int onHold = (int) workOrders.stream().filter(workOrder -> workOrder.getStatus().equals(Status.ON_HOLD)).count();
-        int inProgress = (int) workOrders.stream().filter(workOrder -> workOrder.getStatus().equals(Status.IN_PROGRESS)).count();
+        int onHold =
+                (int) workOrders.stream().filter(workOrder -> workOrder.getStatus().equals(Status.ON_HOLD)).count();
+        int inProgress =
+                (int) workOrders.stream().filter(workOrder -> workOrder.getStatus().equals(Status.IN_PROGRESS)).count();
         int complete = completeWorkOrders.size();
         int todayWO = (int) workOrders.stream().filter(workOrder -> {
             LocalTime midnight = LocalTime.MIDNIGHT;
@@ -107,9 +117,12 @@ public class WOAnalyticsController {
         OwnUser user = userService.whoami(req);
         Date weekStart = Helper.localDateToDate(LocalDate.now().minusDays(7));
         Collection<WorkOrder> workOrders = workOrderService.findByCompany(user.getCompany().getId());
-        Collection<WorkOrder> completeWO = workOrders.stream().filter(workOrder -> workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
-        Collection<WorkOrder> compliantWO = completeWO.stream().filter(WorkOrder::isCompliant).collect(Collectors.toList());
-        Collection<WorkOrder> completeWOWeek = completeWO.stream().filter(workOrder -> workOrder.getCompletedOn().before(new Date()) && workOrder.getCompletedOn().after(weekStart)).collect(Collectors.toList());
+        Collection<WorkOrder> completeWO =
+                workOrders.stream().filter(workOrder -> workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
+        Collection<WorkOrder> compliantWO =
+                completeWO.stream().filter(WorkOrder::isCompliant).collect(Collectors.toList());
+        Collection<WorkOrder> completeWOWeek =
+                completeWO.stream().filter(workOrder -> workOrder.getCompletedOn().before(new Date()) && workOrder.getCompletedOn().after(weekStart)).collect(Collectors.toList());
         Collection<WorkOrder> compliantWOWeek = compliantWO.stream().filter(workOrder -> {
             if (workOrder.getCompletedOn() == null) {
                 return true;
@@ -119,19 +132,25 @@ public class WOAnalyticsController {
                 .complete(completeWO.size())
                 .completeWeek(completeWOWeek.size())
                 .compliantRate(workOrders.isEmpty() ? 1 : ((double) compliantWO.size()) / workOrders.size())
-                .compliantRateWeek(completeWOWeek.isEmpty() ? 1 : ((double) compliantWOWeek.size()) / completeWOWeek.size())
+                .compliantRateWeek(completeWOWeek.isEmpty() ? 1 :
+                        ((double) compliantWOWeek.size()) / completeWOWeek.size())
                 .build());
     }
 
     @PostMapping("/incomplete/overview")
     @PreAuthorize("hasRole('ROLE_CLIENT')")
-    public ResponseEntity<WOIncompleteStats> getIncompleteStats(HttpServletRequest req, @RequestBody DateRange dateRange) {
+    public ResponseEntity<WOIncompleteStats> getIncompleteStats(HttpServletRequest req,
+                                                                @RequestBody DateRange dateRange) {
         OwnUser user = userService.whoami(req);
         if (user.canSeeAnalytics()) {
-            Collection<WorkOrder> workOrders = workOrderService.findByCompanyAndCreatedAtBetween(user.getCompany().getId(), dateRange.getStart(), dateRange.getEnd());
-            Collection<WorkOrder> incompleteWO = workOrders.stream().filter(workOrder -> !workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
+            Collection<WorkOrder> workOrders =
+                    workOrderService.findByCompanyAndCreatedAtBetween(user.getCompany().getId(), dateRange.getStart()
+                            , dateRange.getEnd());
+            Collection<WorkOrder> incompleteWO =
+                    workOrders.stream().filter(workOrder -> !workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
             int total = incompleteWO.size();
-            List<Long> ages = incompleteWO.stream().map(workOrder -> Helper.getDateDiff(workOrder.getRealCreatedAt(), new Date(), TimeUnit.DAYS)).collect(Collectors.toList());
+            List<Long> ages = incompleteWO.stream().map(workOrder -> Helper.getDateDiff(workOrder.getRealCreatedAt(),
+                    new Date(), TimeUnit.DAYS)).collect(Collectors.toList());
             int averageAge = ages.size() == 0 ? 0 : ages.stream().mapToInt(Long::intValue).sum() / ages.size();
             return ResponseEntity.ok(WOIncompleteStats.builder()
                     .total(total)
@@ -142,25 +161,29 @@ public class WOAnalyticsController {
 
     @PostMapping("/incomplete/priority")
     @PreAuthorize("hasRole('ROLE_CLIENT')")
-    public ResponseEntity<WOStatsByPriority> getIncompleteByPriority(HttpServletRequest req, @RequestBody DateRange dateRange) {
+    public ResponseEntity<WOStatsByPriority> getIncompleteByPriority(HttpServletRequest req,
+                                                                     @RequestBody DateRange dateRange) {
         OwnUser user = userService.whoami(req);
         if (user.canSeeAnalytics()) {
-            Collection<WorkOrder> workOrders = workOrderService.findByCompanyAndCreatedAtBetween(user.getCompany().getId(), dateRange.getStart(), dateRange.getEnd());
-            Collection<WorkOrder> incompleteWO = workOrders.stream().filter(workOrder -> !workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
+            Collection<WorkOrder> workOrders =
+                    workOrderService.findByCompanyAndCreatedAtBetween(user.getCompany().getId(), dateRange.getStart()
+                            , dateRange.getEnd());
+            Collection<WorkOrder> incompleteWO =
+                    workOrders.stream().filter(workOrder -> !workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
 
-            List<Integer> highValues = getCountsAndEstimatedDurationByPriority(Priority.HIGH, incompleteWO);
-            List<Integer> noneValues = getCountsAndEstimatedDurationByPriority(Priority.NONE, incompleteWO);
-            List<Integer> lowValues = getCountsAndEstimatedDurationByPriority(Priority.LOW, incompleteWO);
-            List<Integer> mediumValues = getCountsAndEstimatedDurationByPriority(Priority.MEDIUM, incompleteWO);
+            Pair<Integer, Double> highValues = getCountsAndEstimatedDurationByPriority(Priority.HIGH, incompleteWO);
+            Pair<Integer, Double> noneValues = getCountsAndEstimatedDurationByPriority(Priority.NONE, incompleteWO);
+            Pair<Integer, Double> lowValues = getCountsAndEstimatedDurationByPriority(Priority.LOW, incompleteWO);
+            Pair<Integer, Double> mediumValues = getCountsAndEstimatedDurationByPriority(Priority.MEDIUM, incompleteWO);
 
-            int highCounts = highValues.get(0);
-            int highEstimatedDurations = highValues.get(1);
-            int mediumCounts = mediumValues.get(0);
-            int mediumEstimatedDurations = mediumValues.get(1);
-            int lowCounts = lowValues.get(0);
-            int lowEstimatedDurations = lowValues.get(1);
-            int noneCounts = noneValues.get(0);
-            int noneEstimatedDurations = noneValues.get(1);
+            int highCounts = highValues.getFirst();
+            double highEstimatedDurations = highValues.getSecond();
+            int mediumCounts = mediumValues.getFirst();
+            double mediumEstimatedDurations = mediumValues.getSecond();
+            int lowCounts = lowValues.getFirst();
+            double lowEstimatedDurations = lowValues.getSecond();
+            int noneCounts = noneValues.getFirst();
+            double noneEstimatedDurations = noneValues.getSecond();
 
             return ResponseEntity.ok(WOStatsByPriority.builder()
                     .high(WOStatsByPriority.BasicStats.builder()
@@ -189,8 +212,11 @@ public class WOAnalyticsController {
     public ResponseEntity<WOStatuses> getWOStatuses(HttpServletRequest req, @RequestBody DateRange dateRange) {
         OwnUser user = userService.whoami(req);
         if (user.canSeeAnalytics()) {
-            Collection<WorkOrder> workOrders = workOrderService.findByCompanyAndCreatedAtBetween(user.getCompany().getId(), dateRange.getStart(), dateRange.getEnd());
-            Collection<WorkOrder> incompleteWO = workOrders.stream().filter(workOrder -> !workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
+            Collection<WorkOrder> workOrders =
+                    workOrderService.findByCompanyAndCreatedAtBetween(user.getCompany().getId(), dateRange.getStart()
+                            , dateRange.getEnd());
+            Collection<WorkOrder> incompleteWO =
+                    workOrders.stream().filter(workOrder -> !workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
 
             return ResponseEntity.ok(WOStatuses.builder()
                     .open(getWOCountsByStatus(Status.OPEN, incompleteWO))
@@ -203,15 +229,19 @@ public class WOAnalyticsController {
 
     @PostMapping("/incomplete/age/assets")
     @PreAuthorize("hasRole('ROLE_CLIENT')")
-    public ResponseEntity<Collection<IncompleteWOByAsset>> getIncompleteByAsset(HttpServletRequest req, @RequestBody DateRange dateRange) {
+    public ResponseEntity<Collection<IncompleteWOByAsset>> getIncompleteByAsset(HttpServletRequest req,
+                                                                                @RequestBody DateRange dateRange) {
         OwnUser user = userService.whoami(req);
         if (user.canSeeAnalytics()) {
-            Collection<Asset> assets = assetService.findByCompanyAndBefore(user.getCompany().getId(), dateRange.getEnd());
+            Collection<Asset> assets = assetService.findByCompanyAndBefore(user.getCompany().getId(),
+                    dateRange.getEnd());
             Collection<IncompleteWOByAsset> result = new ArrayList<>();
             assets.forEach(asset -> {
-                Collection<WorkOrder> incompleteWO = workOrderService.findByAssetAndCreatedAtBetween(asset.getId(), dateRange.getStart(), dateRange.getEnd())
+                Collection<WorkOrder> incompleteWO = workOrderService.findByAssetAndCreatedAtBetween(asset.getId(),
+                                dateRange.getStart(), dateRange.getEnd())
                         .stream().filter(workOrder -> !workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
-                List<Long> ages = incompleteWO.stream().map(workOrder -> Helper.getDateDiff(workOrder.getCreatedAt(), new Date(), TimeUnit.DAYS)).collect(Collectors.toList());
+                List<Long> ages = incompleteWO.stream().map(workOrder -> Helper.getDateDiff(workOrder.getCreatedAt(),
+                        new Date(), TimeUnit.DAYS)).collect(Collectors.toList());
                 int count = incompleteWO.size();
                 result.add(IncompleteWOByAsset.builder()
                         .count(count)
@@ -226,15 +256,19 @@ public class WOAnalyticsController {
 
     @PostMapping("/incomplete/age/users")
     @PreAuthorize("hasRole('ROLE_CLIENT')")
-    public ResponseEntity<Collection<IncompleteWOByUser>> getIncompleteByUser(HttpServletRequest req, @RequestBody DateRange dateRange) {
+    public ResponseEntity<Collection<IncompleteWOByUser>> getIncompleteByUser(HttpServletRequest req,
+                                                                              @RequestBody DateRange dateRange) {
         OwnUser user = userService.whoami(req);
         if (user.canSeeAnalytics()) {
             Collection<OwnUser> users = userService.findWorkersByCompany(user.getCompany().getId());
             Collection<IncompleteWOByUser> result = new ArrayList<>();
             users.forEach(user1 -> {
-                Collection<WorkOrder> incompleteWO = workOrderService.findByAssignedToUserAndCreatedAtBetween(user1.getId(), dateRange.getStart(), dateRange.getEnd())
-                        .stream().filter(workOrder -> !workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
-                List<Long> ages = incompleteWO.stream().map(workOrder -> Helper.getDateDiff(workOrder.getCreatedAt(), new Date(), TimeUnit.DAYS)).collect(Collectors.toList());
+                Collection<WorkOrder> incompleteWO =
+                        workOrderService.findByAssignedToUserAndCreatedAtBetween(user1.getId(), dateRange.getStart(),
+                                        dateRange.getEnd())
+                                .stream().filter(workOrder -> !workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
+                List<Long> ages = incompleteWO.stream().map(workOrder -> Helper.getDateDiff(workOrder.getCreatedAt(),
+                        new Date(), TimeUnit.DAYS)).collect(Collectors.toList());
                 int count = incompleteWO.size();
                 result.add(IncompleteWOByUser.builder()
                         .count(count)
@@ -253,8 +287,11 @@ public class WOAnalyticsController {
     public ResponseEntity<WOHours> getHours(HttpServletRequest req, @RequestBody DateRange dateRange) {
         OwnUser user = userService.whoami(req);
         if (user.canSeeAnalytics()) {
-            Collection<WorkOrder> workOrders = workOrderService.findByCompanyAndCreatedAtBetween(user.getCompany().getId(), dateRange.getStart(), dateRange.getEnd());
-            int estimated = workOrders.stream().map(WorkOrderBase::getEstimatedDuration).mapToInt(value -> value).sum();
+            Collection<WorkOrder> workOrders =
+                    workOrderService.findByCompanyAndCreatedAtBetween(user.getCompany().getId(), dateRange.getStart()
+                            , dateRange.getEnd());
+            double estimated =
+                    workOrders.stream().map(WorkOrderBase::getEstimatedDuration).mapToDouble(value -> value).sum();
             Collection<Labor> labors = new ArrayList<>();
             workOrders.forEach(workOrder -> labors.addAll(laborService.findByWorkOrder(workOrder.getId())));
             int actual = labors.stream().map(Labor::getDuration).mapToInt(Math::toIntExact).sum() / 3600;
@@ -267,13 +304,15 @@ public class WOAnalyticsController {
 
     @PostMapping("/complete/counts/primaryUser")
     @PreAuthorize("hasRole('ROLE_CLIENT')")
-    public ResponseEntity<Collection<WOCountByUser>> getCountsByUser(HttpServletRequest req, @RequestBody DateRange dateRange) {
+    public ResponseEntity<Collection<WOCountByUser>> getCountsByUser(HttpServletRequest req,
+                                                                     @RequestBody DateRange dateRange) {
         OwnUser user = userService.whoami(req);
         if (user.canSeeAnalytics()) {
             Collection<OwnUser> users = userService.findWorkersByCompany(user.getCompany().getId());
             Collection<WOCountByUser> results = new ArrayList<>();
             users.forEach(user1 -> {
-                int count = (int) workOrderService.findByAssignedToUserAndCreatedAtBetween(user1.getId(), dateRange.getStart(), dateRange.getEnd()).stream()
+                int count = (int) workOrderService.findByAssignedToUserAndCreatedAtBetween(user1.getId(),
+                                dateRange.getStart(), dateRange.getEnd()).stream()
                         .filter(workOrder -> workOrder.getStatus().equals(Status.COMPLETE)).count();
                 results.add(WOCountByUser.builder()
                         .firstName(user1.getFirstName())
@@ -288,13 +327,15 @@ public class WOAnalyticsController {
 
     @PostMapping("/complete/counts/completedBy")
     @PreAuthorize("hasRole('ROLE_CLIENT')")
-    public ResponseEntity<Collection<WOCountByUser>> getCountsByCompletedBy(HttpServletRequest req, @RequestBody DateRange dateRange) {
+    public ResponseEntity<Collection<WOCountByUser>> getCountsByCompletedBy(HttpServletRequest req,
+                                                                            @RequestBody DateRange dateRange) {
         OwnUser user = userService.whoami(req);
         if (user.canSeeAnalytics()) {
             Collection<OwnUser> users = userService.findWorkersByCompany(user.getCompany().getId());
             Collection<WOCountByUser> results = new ArrayList<>();
             users.forEach(user1 -> {
-                int count = (int) workOrderService.findByCompletedByAndCreatedAtBetween(user1.getId(), dateRange.getStart(), dateRange.getEnd()).stream()
+                int count = (int) workOrderService.findByCompletedByAndCreatedAtBetween(user1.getId(),
+                                dateRange.getStart(), dateRange.getEnd()).stream()
                         .filter(workOrder -> workOrder.getStatus().equals(Status.COMPLETE)).count();
                 results.add(WOCountByUser.builder()
                         .firstName(user1.getFirstName())
@@ -309,13 +350,15 @@ public class WOAnalyticsController {
 
     @PostMapping("/complete/counts/priority")
     @PreAuthorize("hasRole('ROLE_CLIENT')")
-    public ResponseEntity<Map<Priority, Integer>> getCountsByPriority(HttpServletRequest req, @RequestBody DateRange dateRange) {
+    public ResponseEntity<Map<Priority, Integer>> getCountsByPriority(HttpServletRequest req,
+                                                                      @RequestBody DateRange dateRange) {
         OwnUser user = userService.whoami(req);
         if (user.canSeeAnalytics()) {
             Priority[] priorities = Priority.values();
             Map<Priority, Integer> results = new HashMap<>();
             Arrays.asList(priorities).forEach(priority -> {
-                int count = (int) workOrderService.findByPriorityAndCompanyAndCreatedAtBetween(priority, user.getCompany().getId(), dateRange.getStart(), dateRange.getEnd()).stream()
+                int count = (int) workOrderService.findByPriorityAndCompanyAndCreatedAtBetween(priority,
+                                user.getCompany().getId(), dateRange.getStart(), dateRange.getEnd()).stream()
                         .filter(workOrder -> workOrder.getStatus().equals(Status.COMPLETE)).count();
                 results.put(priority, count);
             });
@@ -325,13 +368,16 @@ public class WOAnalyticsController {
 
     @PostMapping("/complete/counts/category")
     @PreAuthorize("hasRole('ROLE_CLIENT')")
-    public ResponseEntity<Collection<WOCountByCategory>> getCountsByCategory(HttpServletRequest req, @RequestBody DateRange dateRange) {
+    public ResponseEntity<Collection<WOCountByCategory>> getCountsByCategory(HttpServletRequest req,
+                                                                             @RequestBody DateRange dateRange) {
         OwnUser user = userService.whoami(req);
         if (user.canSeeAnalytics()) {
-            Collection<WorkOrderCategory> categories = workOrderCategoryService.findByCompanySettings(user.getCompany().getCompanySettings().getId());
+            Collection<WorkOrderCategory> categories =
+                    workOrderCategoryService.findByCompanySettings(user.getCompany().getCompanySettings().getId());
             Collection<WOCountByCategory> results = new ArrayList<>();
             categories.forEach(category -> {
-                int count = (int) workOrderService.findByCategoryAndCreatedAtBetween(category.getId(), dateRange.getStart(), dateRange.getEnd()).stream()
+                int count = (int) workOrderService.findByCategoryAndCreatedAtBetween(category.getId(),
+                                dateRange.getStart(), dateRange.getEnd()).stream()
                         .filter(workOrder -> workOrder.getStatus().equals(Status.COMPLETE)).count();
                 results.add(WOCountByCategory.builder()
                         .name(category.getName())
@@ -353,8 +399,9 @@ public class WOAnalyticsController {
                     LocalDate.now(ZoneId.of("UTC"));
             // .with(TemporalAdjusters.previous(DayOfWeek.MONDAY));
             for (int i = 0; i < 5; i++) {
-                Collection<WorkOrder> completeWorkOrders = workOrderService.findByCompletedOnBetweenAndCompany(Helper.localDateToDate(previousMonday.minusDays(7)), Helper.localDateToDate(previousMonday), user.getCompany().getId())
-                        .stream().filter(workOrder -> workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
+                Collection<WorkOrder> completeWorkOrders =
+                        workOrderService.findByCompletedOnBetweenAndCompany(Helper.localDateToDate(previousMonday.minusDays(7)), Helper.localDateToDate(previousMonday), user.getCompany().getId())
+                                .stream().filter(workOrder -> workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
                 int compliant = (int) completeWorkOrders.stream().filter(WorkOrder::isCompliant).count();
                 int reactive = (int) completeWorkOrders.stream().filter(WorkOrder::isReactive).count();
                 result.add(WOCountByWeek.builder()
@@ -379,9 +426,11 @@ public class WOAnalyticsController {
                     LocalDate.now(ZoneId.of("UTC"));
             // .with(TemporalAdjusters.previous(DayOfWeek.MONDAY));
             for (int i = 0; i < 5; i++) {
-                Collection<WorkOrder> completeWorkOrders = workOrderService.findByCompletedOnBetweenAndCompany(Helper.localDateToDate(previousMonday.minusDays(7)), Helper.localDateToDate(previousMonday), user.getCompany().getId())
-                        .stream().filter(workOrder -> workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
-                Collection<WorkOrder> reactiveWorkOrders = completeWorkOrders.stream().filter(WorkOrder::isReactive).collect(Collectors.toList());
+                Collection<WorkOrder> completeWorkOrders =
+                        workOrderService.findByCompletedOnBetweenAndCompany(Helper.localDateToDate(previousMonday.minusDays(7)), Helper.localDateToDate(previousMonday), user.getCompany().getId())
+                                .stream().filter(workOrder -> workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
+                Collection<WorkOrder> reactiveWorkOrders =
+                        completeWorkOrders.stream().filter(WorkOrder::isReactive).collect(Collectors.toList());
 
                 long total = getTime(completeWorkOrders);
                 long reactive = getTime(reactiveWorkOrders);
@@ -398,7 +447,8 @@ public class WOAnalyticsController {
 
     @PostMapping("/complete/costs-time")
     @PreAuthorize("hasRole('ROLE_CLIENT')")
-    public ResponseEntity<WOCostsAndTime> getCompleteCostsAndTime(HttpServletRequest req, @RequestBody DateRange dateRange) {
+    public ResponseEntity<WOCostsAndTime> getCompleteCostsAndTime(HttpServletRequest req,
+                                                                  @RequestBody DateRange dateRange) {
         OwnUser user = userService.whoami(req);
         if (user.canSeeAnalytics()) {
             Collection<WorkOrder> completeWorkOrders = workOrderService.findByCompanyAndCreatedAtBetween(
@@ -422,21 +472,27 @@ public class WOAnalyticsController {
 
     @PostMapping("/complete/costs/date")
     @PreAuthorize("hasRole('ROLE_CLIENT')")
-    public ResponseEntity<List<WOCostsByDate>> getCompleteCostsByDate(HttpServletRequest req, @RequestBody DateRange dateRange) {
+    public ResponseEntity<List<WOCostsByDate>> getCompleteCostsByDate(HttpServletRequest req,
+                                                                      @RequestBody DateRange dateRange) {
         OwnUser user = userService.whoami(req);
         if (user.canSeeAnalytics()) {
             LocalDate endDateLocale = Helper.dateToLocalDate(dateRange.getEnd());
             List<WOCostsByDate> result = new ArrayList<>();
             LocalDate currentDate = Helper.dateToLocalDate(dateRange.getStart());
-            LocalDate endDateExclusive = Helper.dateToLocalDate(dateRange.getEnd()).plusDays(1); // Include end date in the range
-            long totalDaysInRange = ChronoUnit.DAYS.between(Helper.dateToLocalDate(dateRange.getStart()), endDateExclusive);
+            LocalDate endDateExclusive = Helper.dateToLocalDate(dateRange.getEnd()).plusDays(1); // Include end date
+            // in the range
+            long totalDaysInRange = ChronoUnit.DAYS.between(Helper.dateToLocalDate(dateRange.getStart()),
+                    endDateExclusive);
             int points = Math.toIntExact(Math.min(15, totalDaysInRange));
 
             for (int i = 0; i < points; i++) {
-                LocalDate nextDate = currentDate.plusDays(totalDaysInRange / points); // Distribute evenly over the range
+                LocalDate nextDate = currentDate.plusDays(totalDaysInRange / points); // Distribute evenly over the
+                // range
                 nextDate = nextDate.isAfter(endDateLocale) ? endDateLocale : nextDate; // Adjust for the end date
-                Collection<WorkOrder> completeWorkOrders = workOrderService.findByCompletedOnBetweenAndCompany(Helper.localDateToDate(currentDate), Helper.localDateToDate(nextDate), user.getCompany().getId())
-                        .stream().filter(workOrder -> workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
+                Collection<WorkOrder> completeWorkOrders =
+                        workOrderService.findByCompletedOnBetweenAndCompany(Helper.localDateToDate(currentDate),
+                                        Helper.localDateToDate(nextDate), user.getCompany().getId())
+                                .stream().filter(workOrder -> workOrder.getStatus().equals(Status.COMPLETE)).collect(Collectors.toList());
                 result.add(WOCostsByDate.builder()
                         .additionalCost(workOrderService.getAdditionalCost(completeWorkOrders))
                         .laborCost(workOrderService.getLaborCostAndTime(completeWorkOrders).getFirst())
@@ -450,23 +506,30 @@ public class WOAnalyticsController {
 
     @PostMapping("/statuses")
     @PreAuthorize("hasRole('ROLE_CLIENT')")
-    public ResponseEntity<List<WOStatusesByDate>> getReceivedAndResolvedForDateRange(HttpServletRequest req, @RequestBody DateRange dateRange) {
+    public ResponseEntity<List<WOStatusesByDate>> getReceivedAndResolvedForDateRange(HttpServletRequest req,
+                                                                                     @RequestBody DateRange dateRange) {
         OwnUser user = userService.whoami(req);
         LocalDate endDateLocale = Helper.dateToLocalDate(dateRange.getEnd());
         if (user.canSeeAnalytics()) {
             List<WOStatusesByDate> result = new ArrayList<>();
             LocalDate currentDate = Helper.dateToLocalDate(dateRange.getStart());
-            LocalDate endDateExclusive = Helper.dateToLocalDate(dateRange.getEnd()).plusDays(1); // Include end date in the range
-            long totalDaysInRange = ChronoUnit.DAYS.between(Helper.dateToLocalDate(dateRange.getStart()), endDateExclusive);
+            LocalDate endDateExclusive = Helper.dateToLocalDate(dateRange.getEnd()).plusDays(1); // Include end date
+            // in the range
+            long totalDaysInRange = ChronoUnit.DAYS.between(Helper.dateToLocalDate(dateRange.getStart()),
+                    endDateExclusive);
             int points = Math.toIntExact(Math.min(15, totalDaysInRange));
 
             for (int i = 0; i < points; i++) {
-                LocalDate nextDate = currentDate.plusDays(totalDaysInRange / points); // Distribute evenly over the range
+                LocalDate nextDate = currentDate.plusDays(totalDaysInRange / points); // Distribute evenly over the
+                // range
                 nextDate = nextDate.isAfter(endDateLocale) ? endDateLocale : nextDate; // Adjust for the end date
-                Collection<WorkOrder> workOrders = workOrderService.findByCompanyAndCreatedAtBetween(user.getCompany().getId(), dateRange.getStart(), Helper.localDateToDate(nextDate));
+                Collection<WorkOrder> workOrders =
+                        workOrderService.findByCompanyAndCreatedAtBetween(user.getCompany().getId(),
+                                dateRange.getStart(), Helper.localDateToDate(nextDate));
                 LocalDate finalNextDate = nextDate;
                 Collection<Status> statuses = workOrders.stream().map(workOrder -> {
-                    List<WorkOrderAud> workOrderAuds = workOrderAudRepository.findLastByIdAndDate(workOrder.getId(), Helper.localDateToDate(finalNextDate).getTime(), PageRequest.of(0, 1));
+                    List<WorkOrderAud> workOrderAuds = workOrderAudRepository.findLastByIdAndDate(workOrder.getId(),
+                            Helper.localDateToDate(finalNextDate).getTime(), PageRequest.of(0, 1));
                     if (workOrderAuds.isEmpty()) return workOrder.getStatus();
                     else return workOrderAuds.get(0).getStatus();
                 }).filter(Objects::nonNull).collect(Collectors.toList());
@@ -484,15 +547,19 @@ public class WOAnalyticsController {
         } else throw new CustomException("Access Denied", HttpStatus.FORBIDDEN);
     }
 
-    private List<Integer> getCountsAndEstimatedDurationByPriority(Priority priority, Collection<WorkOrder> workOrders) {
-        Collection<WorkOrder> priorityWO = workOrders.stream().filter(workOrder -> workOrder.getPriority().equals(priority)).collect(Collectors.toList());
+    private Pair<Integer, Double> getCountsAndEstimatedDurationByPriority(Priority priority,
+                                                                          Collection<WorkOrder> workOrders) {
+        Collection<WorkOrder> priorityWO =
+                workOrders.stream().filter(workOrder -> workOrder.getPriority().equals(priority)).collect(Collectors.toList());
         int priorityCounts = priorityWO.size();
-        int priorityEstimatedDurations = priorityWO.stream().map(WorkOrderBase::getEstimatedDuration).mapToInt(value -> value).sum();
-        return Arrays.asList(priorityCounts, priorityEstimatedDurations);
+        double priorityEstimatedDurations =
+                priorityWO.stream().map(WorkOrderBase::getEstimatedDuration).mapToDouble(value -> value).sum();
+        return Pair.of(priorityCounts, priorityEstimatedDurations);
     }
 
     private int getWOCountsByStatus(Status status, Collection<WorkOrder> workOrders) {
-        Collection<WorkOrder> statusWO = workOrders.stream().filter(workOrder -> workOrder.getStatus().equals(status)).collect(Collectors.toList());
+        Collection<WorkOrder> statusWO =
+                workOrders.stream().filter(workOrder -> workOrder.getStatus().equals(status)).collect(Collectors.toList());
         return statusWO.size();
     }
 
